CREATE EXTENSION IF NOT EXISTS "uuid-ossp";

CREATE TABLE "EntrepreneurshipType" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" varchar
);

CREATE TABLE "SocialNetWork" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "platform" varchar,
  "url" varchar
);

CREATE TABLE "University" (
  "id" uuid PRIMARY KEY DEFAULT uuid_generate_v4(),
  "acronym" varchar,
  "name" varchar
);

CREATE TABLE "Tags" (
  "id" uuid PRIMARY KEY DEFAULT uuid_generate_v4(),
  "name" varchar
);

CREATE TABLE "Entrepreneurship" (
  "id" uuid PRIMARY KEY DEFAULT uuid_generate_v4(),
  "name" varchar,
  "slogan" text,
  "description" text,
  "creation_date" timestamp,
  "customization" uuid,
  "email" varchar,
  "phone" varchar,
  "subscription" uuid,
  "status" varchar,
  "category" int NOT NULL,
  "social_networks" int UNIQUE NOT NULL,
  "user_founder" uuid NOT NULL
);

CREATE TABLE "EntrepreneurshipCustomization" (
  "id" uuid PRIMARY KEY DEFAULT uuid_generate_v4(),
  "profile_img" varchar,
  "banner_img" varchar,
  "color1" varchar,
  "color2" varchar
);

CREATE TABLE "Partner" (
  "id" uuid PRIMARY KEY DEFAULT uuid_generate_v4(),
  "user_profile" uuid NOT NULL,
  "entrepreneurship" uuid NOT NULL,
  "partner_rol" int NOT NULL,
  "rating" int,
  "comment" text
);

CREATE TABLE "PartnerRol" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" varchar
);

CREATE TABLE "UserStatus" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" varchar
);

CREATE TABLE "user_profile" (
  "id" uuid PRIMARY KEY DEFAULT uuid_generate_v4(),
  "user_id" UUID UNIQUE REFERENCES directus_users(id) ON DELETE CASCADE,
  "profile_picture" varchar,
  "university" uuid NOT NULL,
  "document" varchar,
  "document_type" varchar,
  "status" int NOT NULL,
  "registration_date" timestamp,
  "email_verification" boolean,
  "verification" uuid UNIQUE,
  "user_rating" decimal,
  "partner_rating" decimal
);

CREATE TABLE "Notification" (
  "id" uuid PRIMARY KEY DEFAULT uuid_generate_v4(),
  "user_profile" uuid,
  "type" int,
  "title" varchar,
  "content" varchar
);

CREATE TABLE "NotificationType" (
  "id" int PRIMARY KEY,
  "name" varchar
);

CREATE TABLE "EntrepreneurshipSubscription" (
  "id" uuid PRIMARY KEY DEFAULT uuid_generate_v4(),
  "subscription_plan" uuid,
  "cutoff_date" timestamp,
  "last_payment" timestamp
);

CREATE TABLE "SubscriptionPlans" (
  "id" uuid PRIMARY KEY DEFAULT uuid_generate_v4(),
  "name" varchar,
  "price" decimal,
  "description" text,
  "benefits" text
);

CREATE TABLE "Verification" (
  "id" uuid PRIMARY KEY DEFAULT uuid_generate_v4(),
  "university" uuid NOT NULL,
  "front_document" varchar,
  "back_document" varchar,
  "selfie_with_document" varchar,
  "status" varchar,
  "verification_date" timestamp
);

CREATE TABLE "Product" (
  "id" uuid PRIMARY KEY DEFAULT uuid_generate_v4(),
  "entrepreneurship" uuid,
  "name" varchar,
  "description" text,
  "price" decimal,
  "quantity" int,
  "stock_alert" int
);

CREATE TABLE "ProductVariant" (
  "id" uuid PRIMARY KEY DEFAULT uuid_generate_v4(),
  "product" uuid NOT NULL,
  "nombre" varchar,
  "stock" int
);

CREATE TABLE "ProductImage" (
  "id" uuid PRIMARY KEY DEFAULT uuid_generate_v4(),
  "image_url" varchar,
  "product_variant" uuid NOT NULL
);

CREATE TABLE "ProductSpecification" (
  "id" uuid PRIMARY KEY DEFAULT uuid_generate_v4(),
  "product" uuid,
  "key" varchar,
  "value" varchar
);

CREATE TABLE "Order" (
  "id" uuid PRIMARY KEY DEFAULT uuid_generate_v4(),
  "user_profile" uuid,
  "entrepreneurship" uuid,
  "date" timestamp,
  "status" varchar,
  "subtotal" decimal,
  "discount" decimal,
  "total" decimal
);

CREATE TABLE "OrderDetail" (
  "id" uuid PRIMARY KEY DEFAULT uuid_generate_v4(),
  "order" uuid NOT NULL,
  "product" uuid NOT NULL,
  "amount" int,
  "unit_price" decimal
);

CREATE TABLE "Payment" (
  "id" uuid PRIMARY KEY DEFAULT uuid_generate_v4(),
  "order" uuid,
  "payment_method" uuid,
  "status" varchar,
  "payment_date" timestamp,
  "created_at" timestamp
);

CREATE TABLE "PaymentMethod" (
  "id" uuid PRIMARY KEY DEFAULT uuid_generate_v4(),
  "name" varchar
);

CREATE TABLE "PaymentEvidence" (
  "id" uuid PRIMARY KEY DEFAULT uuid_generate_v4(),
  "payment" uuid NOT NULL,
  "url" varchar,
  "description" text,
  "uploaded_at" timestamp
);

CREATE TABLE "DeliveryStatus" (
  "id" uuid PRIMARY KEY DEFAULT uuid_generate_v4(),
  "name" varchar
);

CREATE TABLE "Delivery" (
  "id" uuid PRIMARY KEY DEFAULT uuid_generate_v4(),
  "type" varchar,
  "delivery_address" text,
  "order" uuid NOT NULL,
  "partner" uuid
);

CREATE TABLE "DeliveryStatusLog" (
  "id" uuid PRIMARY KEY DEFAULT uuid_generate_v4(),
  "delivery" uuid NOT NULL,
  "delivery_status" uuid NOT NULL,
  "updated_by" uuid NOT NULL,
  "updated_at" timestamp
);

CREATE TABLE "Review" (
  "id" uuid PRIMARY KEY DEFAULT uuid_generate_v4(),
  "user_profile" uuid NOT NULL,
  "product" uuid NOT NULL,
  "rating" int,
  "comment" text,
  "creation_date" timestamp
);

CREATE TABLE "Collaboration" (
  "id" uuid PRIMARY KEY DEFAULT uuid_generate_v4(),
  "name" varchar,
  "description" text,
  "price" decimal
);

CREATE TABLE "CollaborationMembers" (
  "id" uuid PRIMARY KEY DEFAULT uuid_generate_v4(),
  "collaboration" uuid NOT NULL,
  "entrepreneurship" uuid NOT NULL,
  "joined_at" timestamp
);

CREATE TABLE "CollaborationImage" (
  "id" uuid PRIMARY KEY DEFAULT uuid_generate_v4(),
  "image_url" varchar,
  "collaboration" uuid NOT NULL
);

CREATE TABLE "CollaborationProducts" (
  "id" uuid PRIMARY KEY DEFAULT uuid_generate_v4(),
  "amount" int,
  "collaboration" uuid NOT NULL,
  "product" uuid NOT NULL
);

CREATE TABLE "Banner" (
  "id" uuid PRIMARY KEY DEFAULT uuid_generate_v4(),
  "url" varchar,
  "created_at" varchar
);

COMMENT ON COLUMN "Entrepreneurship"."status" IS 'Enum: active, inactive';

COMMENT ON COLUMN "user_profile"."document_type" IS 'C.C, Etc.';

COMMENT ON COLUMN "Verification"."status" IS 'Pending, Approved, Rejected';

COMMENT ON COLUMN "Payment"."status" IS 'Pending, Confirmed, Rejected';

COMMENT ON COLUMN "Delivery"."type" IS 'Delivery, Pick_Up';

ALTER TABLE "Entrepreneurship" ADD FOREIGN KEY ("customization") REFERENCES "EntrepreneurshipCustomization" ("id");

ALTER TABLE "Entrepreneurship" ADD FOREIGN KEY ("subscription") REFERENCES "EntrepreneurshipSubscription" ("id");

ALTER TABLE "Entrepreneurship" ADD FOREIGN KEY ("category") REFERENCES "EntrepreneurshipType" ("id");

ALTER TABLE "SocialNetWork" ADD FOREIGN KEY ("id") REFERENCES "Entrepreneurship" ("social_networks");

ALTER TABLE "Entrepreneurship" ADD FOREIGN KEY ("user_founder") REFERENCES "user_profile" ("id");

ALTER TABLE "Partner" ADD FOREIGN KEY ("user_profile") REFERENCES "user_profile" ("id");

ALTER TABLE "Partner" ADD FOREIGN KEY ("entrepreneurship") REFERENCES "Entrepreneurship" ("id");

ALTER TABLE "Partner" ADD FOREIGN KEY ("partner_rol") REFERENCES "PartnerRol" ("id");

ALTER TABLE "user_profile" ADD FOREIGN KEY ("university") REFERENCES "University" ("id");

ALTER TABLE "user_profile" ADD FOREIGN KEY ("status") REFERENCES "UserStatus" ("id");

ALTER TABLE "user_profile" ADD FOREIGN KEY ("verification") REFERENCES "Verification" ("id");

ALTER TABLE "Notification" ADD FOREIGN KEY ("user_profile") REFERENCES "user_profile" ("id");

ALTER TABLE "Notification" ADD FOREIGN KEY ("type") REFERENCES "NotificationType" ("id");

ALTER TABLE "EntrepreneurshipSubscription" ADD FOREIGN KEY ("subscription_plan") REFERENCES "SubscriptionPlans" ("id");

ALTER TABLE "Verification" ADD FOREIGN KEY ("university") REFERENCES "University" ("id");

ALTER TABLE "Product" ADD FOREIGN KEY ("entrepreneurship") REFERENCES "Entrepreneurship" ("id");

ALTER TABLE "ProductVariant" ADD FOREIGN KEY ("product") REFERENCES "Product" ("id");

ALTER TABLE "ProductImage" ADD FOREIGN KEY ("product_variant") REFERENCES "ProductVariant" ("id");

ALTER TABLE "ProductSpecification" ADD FOREIGN KEY ("product") REFERENCES "Product" ("id");

ALTER TABLE "Order" ADD FOREIGN KEY ("user_profile") REFERENCES "user_profile" ("id");

ALTER TABLE "Order" ADD FOREIGN KEY ("entrepreneurship") REFERENCES "Entrepreneurship" ("id");

ALTER TABLE "OrderDetail" ADD FOREIGN KEY ("order") REFERENCES "Order" ("id");

ALTER TABLE "OrderDetail" ADD FOREIGN KEY ("product") REFERENCES "Product" ("id");

ALTER TABLE "Payment" ADD FOREIGN KEY ("order") REFERENCES "Order" ("id");

ALTER TABLE "Payment" ADD FOREIGN KEY ("payment_method") REFERENCES "PaymentMethod" ("id");

ALTER TABLE "PaymentEvidence" ADD FOREIGN KEY ("payment") REFERENCES "Payment" ("id");

ALTER TABLE "Delivery" ADD FOREIGN KEY ("order") REFERENCES "Order" ("id");

ALTER TABLE "Delivery" ADD FOREIGN KEY ("partner") REFERENCES "Partner" ("id");

ALTER TABLE "DeliveryStatusLog" ADD FOREIGN KEY ("delivery") REFERENCES "Delivery" ("id");

ALTER TABLE "DeliveryStatusLog" ADD FOREIGN KEY ("delivery_status") REFERENCES "DeliveryStatus" ("id");

ALTER TABLE "DeliveryStatusLog" ADD FOREIGN KEY ("updated_by") REFERENCES "user_profile" ("id");

ALTER TABLE "Review" ADD FOREIGN KEY ("user_profile") REFERENCES "user_profile" ("id");

ALTER TABLE "Review" ADD FOREIGN KEY ("product") REFERENCES "Product" ("id");

ALTER TABLE "CollaborationMembers" ADD FOREIGN KEY ("collaboration") REFERENCES "Collaboration" ("id");

ALTER TABLE "CollaborationMembers" ADD FOREIGN KEY ("entrepreneurship") REFERENCES "Entrepreneurship" ("id");

ALTER TABLE "CollaborationImage" ADD FOREIGN KEY ("collaboration") REFERENCES "Collaboration" ("id");

ALTER TABLE "CollaborationProducts" ADD FOREIGN KEY ("collaboration") REFERENCES "Collaboration" ("id");

ALTER TABLE "CollaborationProducts" ADD FOREIGN KEY ("product") REFERENCES "Product" ("id");

CREATE TABLE "Entrepreneurship_Tags" (
  "Entrepreneurship_id" uuid,
  "Tags_id" uuid,
  PRIMARY KEY ("Entrepreneurship_id", "Tags_id")
);

ALTER TABLE "Entrepreneurship_Tags" ADD FOREIGN KEY ("Entrepreneurship_id") REFERENCES "Entrepreneurship" ("id");

ALTER TABLE "Entrepreneurship_Tags" ADD FOREIGN KEY ("Tags_id") REFERENCES "Tags" ("id");